cmake_minimum_required(VERSION 3.31)
project(Session05 C)

set(CMAKE_C_STANDARD 23)

add_executable(Session05 main.c
        PTIT_CNTT3_IT201_Session05_Bai1.c
        PTIT_CNTT3_IT201_Session05_Bai2.c
        PTIT_CNTT3_IT201_Session05_Bai3.c
        PTIT_CNTT3_IT201_Session05_Bai4.c
        TIT_CNTT3_IT201_Session05_Bai5.c
        PTIT_CNTT3_IT201_Session05_Bai6.c
        PTIT_CNTT3_IT201_Session05_Bai7.c
        PTIT_CNTT3_IT201_Session05_Bai8.c
)
